--- a/examples/nested-content/nested-content.html
+++ b/examples/nested-content/nested-content.html
@@ -18,6 +18,7 @@
       <button onclick="pushClick()">Push</button>
     </p>
     <script src="../../dist/main.js"></script>
+    <script src="../base.js"></script>
     <script src="./nested-content.js"></script>
   </body>
 </html>
