--- a/examples/text/text.html
+++ b/examples/text/text.html
@@ -4,12 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Title</title>
-    <style>
-    .npt-content {
-      border: 1px solid gray;
-    }
-    </style>
+    <title>Neptune Example</title>
   </head>
 
   <body>
