Add matrix element

--- a/examples/matrix/matrix.html
+++ b/examples/matrix/matrix.html
@@ -15,6 +15,6 @@
     </p>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
-    <script src="./2d-sequence.js"></script>
+    <script src="./matrix.js"></script>
   </body>
 </html>
