Use a dedicated folder for element examples

--- a/examples/1 Elements/matrix/matrix.html
+++ b/examples/1 Elements/matrix/matrix.html
@@ -9,11 +9,8 @@
 
   <body>
     <div id="playground"></div>
-    <p>
-      <button onclick="pushClick()">Push</button>
-    </p>
-    <script src="../../dist/main.js"></script>
-    <script src="../base.js"></script>
-    <script src="./nested-content.js"></script>
+    <script src="../../../dist/main.js"></script>
+    <script src="../../base.js"></script>
+    <script src="./matrix.js"></script>
   </body>
 </html>
