--- a/examples/1 Elements/nested-content/nested-content.html
+++ b/examples/1 Elements/nested-content/nested-content.html
@@ -9,8 +9,11 @@
 
   <body>
     <div id="playground"></div>
-    <script src="../../dist/main.js"></script>
-    <script src="../base.js"></script>
-    <script src="./matrix.js"></script>
+    <p>
+      <button onclick="pushClick()">Push</button>
+    </p>
+    <script src="../../../dist/main.js"></script>
+    <script src="../../base.js"></script>
+    <script src="./nested-content.js"></script>
   </body>
 </html>
