Reorganize example structure

--- a/examples/decorated-atom/decorated-atom.html
+++ b/examples/decorated-atom/decorated-atom.html
@@ -9,8 +9,9 @@
 
   <body>
     <div id="playground"></div>
-    <script src="../../../dist/main.js"></script>
-    <script src="../../base.js"></script>
-    <script src="./matrix.js"></script>
+    <button onclick="pushDecorator()">Push decorator</button>
+    <script src="../../dist/main.js"></script>
+    <script src="../base.js"></script>
+    <script src="./decorated-atom.js"></script>
   </body>
 </html>
