--- a/examples/matrix/matrix.html
+++ b/examples/matrix/matrix.html
@@ -9,9 +9,8 @@
 
   <body>
     <div id="playground"></div>
-    <button onclick="pushDecorator()">Push decorator</button>
-    <script src="../../../dist/main.js"></script>
-    <script src="../../base.js"></script>
-    <script src="./decorated-atom.js"></script>
+    <script src="../../dist/main.js"></script>
+    <script src="../base.js"></script>
+    <script src="./matrix.js"></script>
   </body>
 </html>
