--- a/examples/nested-content/nested-content.html
+++ b/examples/nested-content/nested-content.html
@@ -10,10 +10,10 @@
   <body>
     <div id="playground"></div>
     <p>
-      <button onclick="update()">Update colors</button>
+      <button onclick="pushClick()">Push</button>
     </p>
-    <script src="../../../dist/main.js"></script>
-    <script src="../../base.js"></script>
-    <script src="./atom-colors.js"></script>
+    <script src="../../dist/main.js"></script>
+    <script src="../base.js"></script>
+    <script src="./nested-content.js"></script>
   </body>
 </html>
