--- a/examples/text/text.html
+++ b/examples/text/text.html
@@ -13,8 +13,8 @@
       <button onclick="longStringClick()">Long string</button>
       <button onclick="shortStringClick()">Short string</button>
     </p>
-    <script src="../../../dist/main.js"></script>
-    <script src="../../base.js"></script>
+    <script src="../../dist/main.js"></script>
+    <script src="../base.js"></script>
     <script src="./text.js"></script>
   </body>
 </html>
