--- a/examples/decorated-atom/decorated-atom.html
+++ b/examples/decorated-atom/decorated-atom.html
@@ -9,7 +9,10 @@
 
   <body>
     <div id="playground"></div>
-    <button onclick="pushDecorator()">Push decorator</button>
+    <button onclick="pushFront()">Push front</button>
+    <button onclick="pushBack()">Push back</button>
+    <button onclick="popFront()">Pop front</button>
+    <button onclick="popBack()">Pop back</button>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
     <script src="./decorated-atom.js"></script>
